# decodetree

./: Cargo.toml  README.md
data/: example.decode
examples/: parse.rs
src/: error.rs  gen.rs  generator.rs  lib.rs  parser.rs
src/parser/: parse.rs
