[package]
name = "decodetree"
description = "Decodetree parser and generator"
version = "0.4.6"
license = "LGPL-3.0-only"
keywords = ["disassembler", "decodetree"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/decodetree"
edition = "2021"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = []
gen = ["raw"]
raw = []

[dependencies]
nom = "7"
nom_locate = "4"

[workspace]
members = [
    "tests/gen",
]
default-members = [
    ".",
    "tests/gen",
]
